--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         });
       });
     </script>
-    <title><a href="index.html">Kidsatwork-PayPal</a></title>
+    <title>Kidsatwork-PayPal</title>
   </head>
 
   <body>
     <div class="center">
       <header>
         <div class="inner">
-          <h1>Kidsatwork-pp</h1>
+          <a href="index.html"><h1>Kidsatwork-pp</h1></a>
           <h2>Demo PayPal website for Kids</h2>
         </div>
       </header>
