--- a/price.html
+++ b/price.html
@@ -61,7 +61,7 @@
     </section>
 
     <section id="qr-holder">
-      Show this QR Code to the Shop Keeper to get your goodie <br/>
+      Show this QR Code to the Shop Keeper <br/>
       <img id="qrcode" src=""/> <br/>
     </section>
 
