changed one clue

--- a/clue-10936.html
+++ b/clue-10936.html
@@ -55,7 +55,7 @@
       </section>
     </div>
       <div id="cluetext">
-        <h3>Clue: Plastic ball on a Table </h3>
+        <h3>Clue: Mail Room </h3>
       </div>
     </div>
   
